@@ -40,6 +40,7 @@
 || <a href=pygame_mouse.html>mouse</a> || 
 <a href=pygame_surfarray.html>surfarray</a> || 
 <a href=pygame_time.html>time</a> || 
+<a href=pygame_transform.html>transform</a> || 
 <a href=pygame_version.html>version</a> ||<br>
 
 
